--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="cabecalho">
+    <nav class="cabecalho_menu">
+      <a class="cabecalho_link" href="index.html">Home</a>
+      <a class="cabecalho_link" href="about.html">Sobre Mim</a>
+      <a class="cabecalho_link" href="curriculum.html">Curriculo</a>
+      <a class="cabecalho_link" href = "projects.html">Projetos</a> 
+    </nav>
+  </header> 
+  <main class = "apresentacao"> 
+    <section class = "apresentacao__conteudo">
+      <h1 class ="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">
+        com um Front - End de qualidade! </strong></h1>  
+        <p class = "apresentacao_conteudo_p1">Olá! Sou Lucas Fonseca, desenvolvedor Front-end com especialidade em<strong class = "nome-destaque"> JavaScript, TypeScript, React, Next.js
+          HTML e CSS. </strong></p>  
+          <div class="apresentaocao_links"> 
+            <h2 class="apresentacao_links_sub">Acesse minhas redes: </h2>
+        <a href = "https://www.linkedin.com/in/lucas-fonseca-21080a203/" class="button">
+          <img src="./assets/Logo linkedin.png" alt="imagem do linkedin" style="width: 30px; height: auto;">
+          Linkedin</a>
+        <a href = "https://github.com/Lucasfonseca2002" class="button">
+          <img src="./assets/github.png" alt="imagem do github" style="width: 30px; height: auto;">
+          GitHub </a>     
+      </div>
+      </section>
+       <img src="./assets/fotopessoal.jpg" alt="imagem de um computador" style="width: 30%; height: auto;" class="minha_classe">
+  </main>
+  <footer class="rodape"> 
+    <p>Desenvolvido por Lucas</p>   
+  </footer>
+</body>
+</html> 
 
