Projeto em andamento

--- a/about.html
+++ b/about.html
@@ -12,8 +12,6 @@
         <nav class="cabecalho_menu">
             <a class="cabecalho_link" href="index.html">Home</a>
             <a class="cabecalho_link" href="about.html">Sobre Mim</a>
-            <a class="cabecalho_link" href="curriculum.html">Curriculo</a>
-            <a class="cabecalho_link" href = "projects.html">Projetos</a> 
           </nav>
     </header>
     <main class="apresentacao">
@@ -30,11 +28,9 @@
             de mim, algumas das minhas habilidades são: HTML, CSS, JavaScript, TypeScript, React, Next.js, Git, GitHub e Python.
            </p>
         </section>
-        <img src="./assets/fotopessoal.jpg" alt="imagem de um computador" style="width: 30%; height: auto;" class="minha_classe"> 
+        <img src="./assets/fotopessoal.jpg" alt="imagem de um computador" class="minha_classe"> 
 
     </main>
     <footer class="rodape"> 
         <p>Desenvolvido por Lucas</p>   
       </footer>
-</body>
-</html>
