--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <nav class="cabecalho_menu">
       <a class="cabecalho_link" href="index.html">Home</a>
       <a class="cabecalho_link" href="about.html">Sobre Mim</a>
-      <a class="cabecalho_link" href="curriculum.html">Curriculo</a>
-      <a class="cabecalho_link" href = "projects.html">Projetos</a> 
+      
     </nav>
   </header> 
   <main class = "apresentacao"> 
@@ -21,7 +20,7 @@
       <h1 class ="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">
         com um Front - End de qualidade! </strong></h1>  
         <p class = "apresentacao_conteudo_p1">Olá! Sou Lucas Fonseca, desenvolvedor Front-end com especialidade em<strong class = "nome-destaque"> JavaScript, TypeScript, React, Next.js
-          HTML e CSS. </strong></p>  
+          HTML e CSS e Python. </strong></p>  
           <div class="apresentaocao_links"> 
             <h2 class="apresentacao_links_sub">Acesse minhas redes: </h2>
         <a href = "https://www.linkedin.com/in/lucas-fonseca-21080a203/" class="button">
@@ -32,11 +31,10 @@
           GitHub </a>     
       </div>
       </section>
-       <img src="./assets/fotopessoal.jpg" alt="imagem de um computador" style="width: 30%; height: auto;" class="minha_classe">
+       <img src="./assets/fotopessoal.jpg" alt="imagem de um computador" class="minha_classe">
   </main>
   <footer class="rodape"> 
     <p>Desenvolvido por Lucas</p>   
   </footer>
 </body>
 </html> 
-
